适配对应版本